[package]
name = "rs-imagehost"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
sled = "0.34.7"
bincode = "1.3.3"
jsonwebtoken = "8"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.10.0"
regex = "1.5.5"
lazy_static = "1.4.0"
rand = "0.8"
